app/deploy/frontend/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: default 
  name: products-frontend
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http-frontend
      protocol: HTTP
    hosts:
    - products.demo.local
